--- a/package.json
+++ b/package.json
@@ -3,16 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.16",
+    "@mui/styles": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
     "framer-motion": "^10.11.2",
+    "moment": "^2.29.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "react-lazyload": "^3.2.0",
+    "react-loading-skeleton": "^3.2.0",
+    "react-owl-carousel": "^2.3.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
+    "react-swipeable-views": "^0.14.0",
+    "react-transition-group": "^4.4.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.61.0",
+    "slick-carousel": "^1.8.1",
+    "styled-loaders-react": "^1.1.0",
+    "sweetalert": "^2.1.2",
+    "swiper": "^9.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
